<resources>
    <string name="app_name">Made In My Home</string>
    <string name="apikey">d5jrhkq7n52q</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="code">Code User</string>

    <string name="name">Name</string>
    <string name="price">Price :</string>
    <string name="size">Size</string>
    <string name="unit">unit</string>
    <string name="description">Description</string>
    <string name="description_optional">Description(optional)</string>
    <string name="discount_date">Discount Date(optional)</string>
    <string name="discount">Discount(optional)</string>
    <string name="category">Category :</string>
    <string name="presenter">Presenter</string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="error">field must be insert</string>

    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="phoneList">
        <item>079</item>
        <item>078</item>
        <item>077</item>
    </string-array>

    <string-array name="unitList">
        <item>item</item>
        <item>g</item>
        <item>kg</item>
        <item>m</item>
        <item>cm</item>
    </string-array>

    <string-array name="locationList">
        <item>Amman</item>
        <item>Ajloun</item>
        <item>Jerash</item>
        <item>Mafraq</item>
        <item>Irbid</item>
        <item>Zarqa</item>
        <item>Al-Salt</item>
        <item>Madaba</item>
        <item>Al-Karak</item>
        <item>Aqaba</item>
        <item>Ma\'an</item>
        <item>Tafila</item>
    </string-array>

    //drawer
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home Activity</string>
    <string name="title_products">products</string>
    <string name="title_courses">courses</string>
    <string name="title_favorite">favorite</string>
    <string name="title_myProducts">my products</string>
    <string name="title_categoryProducts">category products</string>
    <string name="title_LogOut">Logout</string>
    <string name="title_myCourse">my Course</string>
    <string name="title_categoryCourse">category Course</string>
    <string name="profile">profile</string>
    <string name="title_categoryByProducts">category</string>

    //test mohammad introduction
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="finish">GOT IT</string>
    <string name="slide_1_title">أختر منتجك بنفسك!</string>
    <string name="slide_1_desc">أسهل طريقة لطلب المنتج من متجرك المفضل!</string>

    <string name="slide_2_title">أضف منتجك !</string>
    <string name="slide_2_desc">قم بإضافة منتجك الآن كما تريد!</string>

    <string name="slide_3_title"> الخصم المميز ! </string>
    <string name="slide_3_desc">أضف خصما مميزا إلى منتجك لكي يسهل ترويجه !</string>

    <string name="slide_4_title">تعلمي بنفسك</string>
    <string name="slide_4_desc">تعلمي بنفسك وأصنعي المنتج الذي تحلمي به!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" >Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_showProfile">show Profile</string>


    //show dialog
    <string name="dialog_No">لا</string>
    <string name="dialog_yes">نعم</string>
    <string name="dialog_cancel">إلغاء</string>
    <string name="dialog_Title">عزيزي المستخدم</string>
    <string name="dialog_msg">هل تريد الخروج من التطبيق ؟</string>


    //profile arabic
    <string name="first_name_Ar">الإسم الأول</string>
    <string name="last_name_Ar">الإسم الأخير</string>
    <string name="email_Ar">الإيميل</string>
    <string name="phone_Ar">رقم الهاتف</string>
    <string name="gender_Ar">نوع المستخدم</string>
    <string name="date_Ar">تاريخ الميلاد</string>
    <string name="description_Ar">الوصف</string>
    <string name="location_Ar">الموقع</string>
    <string name="login_in_signup">have account , login</string>


    //add comment
    <string name="btn_deleteComment">أزل التقييم</string>
    <string name="btn_addComment">أضف تعليق</string>
    <string name="title_addComment">يمكنك إضافة تعليقا لأي منتج تريده</string>
    <string name="description_addComment">أضف تعليقًا</string>
    <string name="title_activity_show_profile_to_user">showProfileToUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Info profile </string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_user">name user</string>
    <string name="chat">chat</string>
    <string name="since">since :</string>
    <string name="share">share</string>
    <string name="cart">cart</string>
    <string name="comments">comments</string>
    <string name="rating">rating :</string>
    <string name="report">report</string>
    <string name="write_the_problem">write the problem in the video</string>
    <string name="report_video">report this video</string>

    <string name="update_profile">update profile</string>
    <string name="title_activity_search_app">SearchAppActivity</string>
    
    //search
    <string name="code_search">Search Code User</string>
    <string name="title_activity_user">user</string>
    <string name="validation_code">enter validation code</string>
    <string name="sent_email">We sent an email for</string>
    <string name="put_email">put email to send key for reset password</string>
    <string name="new_password">enter new password</string>

</resources>