<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/put_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/validation_code"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:visibility="gone"/>

</LinearLayout>