<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="@dimen/image"
            android:layout_height="@dimen/image"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin"
            android:src="@drawable/images" />

        <androidx.cardview.widget.CardView
            android:id="@+id/userInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUserProfile"
            app:cardElevation="@dimen/cardview_default_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/FirstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EmailUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Description_User"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderUser"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintBottom_toTopOf="@+id/gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Phone_User"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Location_User"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/update"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>











