<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/boxCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.siyamed.shapeimageview.DiamondImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/defult_product" />


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/presenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/presenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/category"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@id/presenter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>